Enum lead_status {
    new
    contacted
    qualified
    lost
}

Enum deal_stage {
    prospecting
    qualification
    proposal
    closed_won
    closed_lost
}

Table user {
    id int [pk, increment]
    name varchar [not null]
    email varchar [not null]
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

Table company {
    id int [pk, increment]
    name varchar [not null]
    address varchar
    phone varchar
    website varchar
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

Table contact {
    id int [pk, increment]
    company_id int [not null]
    first_name varchar [not null]
    last_name varchar [not null]
    email varchar
    phone varchar
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

Table lead {
    id int [pk, increment]
    company_id int
    contact_id int
    status lead_status [not null]
    source varchar
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

Table deal {
    id int [pk, increment]
    company_id int [not null]
    contact_id int [not null]
    lead_id int
    amount decimal
    stage deal_stage [not null]
    close_date date
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

Ref: contact.company_id > company.id
Ref: lead.company_id > company.id
Ref: lead.contact_id > contact.id
Ref: deal.company_id > company.id
Ref: deal.contact_id > contact.id
Ref: deal.lead_id > lead.id